(chores) refactoring about escape games
