# src/docs/swagger-output.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "Canal Olympia Scrapping REST API",
+    "title": "Ciné Book Scrapping REST API",
     "description": "",
     "license": {
       "name": "MIT Licence",
@@ -174,7 +174,7 @@
             }
           },
           "422": {
-            "description": "Your body was bad formatted",
+            "description": "Your body or query was bad formatted",
             "content": {
               "application/json": {
                 "schema": {
@@ -182,7 +182,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -224,7 +224,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -395,7 +395,7 @@
             }
           },
           "422": {
-            "description": "Your body was bad formatted",
+            "description": "Your body or query was bad formatted",
             "content": {
               "application/json": {
                 "schema": {
@@ -403,7 +403,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -445,7 +445,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -616,7 +616,7 @@
             }
           },
           "422": {
-            "description": "Your body was bad formatted",
+            "description": "Your body or query was bad formatted",
             "content": {
               "application/json": {
                 "schema": {
@@ -624,7 +624,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -666,7 +666,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -844,7 +844,7 @@
             }
           },
           "422": {
-            "description": "Your body was bad formatted",
+            "description": "Your body or query was bad formatted",
             "content": {
               "application/json": {
                 "schema": {
@@ -852,7 +852,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -894,7 +894,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -1010,16 +1010,6 @@
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "/theaters/escape-game": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
           }
         }
       }
@@ -1154,7 +1144,7 @@
             }
           },
           "422": {
-            "description": "Your body was bad formatted",
+            "description": "Your body or query was bad formatted",
             "content": {
               "application/json": {
                 "schema": {
@@ -1162,7 +1152,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -1204,7 +1194,232 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Your body was bad formatted"
+                      "example": "Your body or query was bad formatted"
+                    },
+                    "errors": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "type": {
+                            "type": "string",
+                            "example": "field"
+                          },
+                          "value": {
+                            "type": "string",
+                            "example": "zk"
+                          },
+                          "msg": {
+                            "type": "string",
+                            "example": "Invalid value"
+                          },
+                          "path": {
+                            "type": "string",
+                            "example": "lang"
+                          },
+                          "location": {
+                            "type": "string",
+                            "example": "query"
+                          }
+                        }
+                      }
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/escape-games/": {
+      "get": {
+        "tags": [
+          "Escape Games"
+        ],
+        "summary": "Fetch informations current escape games",
+        "description": "",
+        "parameters": [
+          {
+            "name": "lang",
+            "in": "query",
+            "description": "The response language",
+            "schema": {
+              "type": "string",
+              "enum": [
+                "fr",
+                "en"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TheaterEscapeGame"
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TheaterEscapeGame"
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Bad request"
+                    },
+                    "errors": {
+                      "type": "string",
+                      "example": "any"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Bad request"
+                    },
+                    "errors": {
+                      "type": "string",
+                      "example": "any"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Theater not found"
+                    },
+                    "errors": {
+                      "type": "array",
+                      "example": [],
+                      "items": {}
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Theater not found"
+                    },
+                    "errors": {
+                      "type": "array",
+                      "example": [],
+                      "items": {}
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Your body or query was bad formatted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Your body or query was bad formatted"
+                    },
+                    "errors": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "type": {
+                            "type": "string",
+                            "example": "field"
+                          },
+                          "value": {
+                            "type": "string",
+                            "example": "zk"
+                          },
+                          "msg": {
+                            "type": "string",
+                            "example": "Invalid value"
+                          },
+                          "path": {
+                            "type": "string",
+                            "example": "lang"
+                          },
+                          "location": {
+                            "type": "string",
+                            "example": "query"
+                          }
+                        }
+                      }
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Your body or query was bad formatted"
                     },
                     "errors": {
                       "type": "array",
@@ -1440,7 +1655,7 @@
               "properties": {
                 "title": {
                   "type": "string",
-                  "example": "Canal Olympia"
+                  "example": "Ciné Book"
                 },
                 "link": {
                   "type": "string",
@@ -1453,7 +1668,52 @@
         "xml": {
           "name": "TheaterInfos"
         }
+      },
+      "TheaterEscapeGame": {
+        "type": "object",
+        "properties": {
+          "theaterName": {
+            "type": "string",
+            "example": "any"
+          },
+          "name": {
+            "type": "string",
+            "example": "any"
+          },
+          "img": {
+            "type": "string",
+            "example": "https://example.com"
+          },
+          "price": {
+            "type": "number",
+            "example": 123
+          },
+          "groupSizeMin": {
+            "type": "number",
+            "example": 123
+          },
+          "groupSizeMax": {
+            "type": "number",
+            "example": 123
+          },
+          "difficulty": {
+            "type": "number",
+            "example": 123
+          },
+          "description": {
+            "type": "string",
+            "example": "any"
+          },
+          "minAge": {
+            "type": "number",
+            "example": 123
+          }
+        },
+        "xml": {
+          "name": "TheaterEscapeGame"
+        }
       }
     }
-  }
+  },
+  "url": "http://localhost:3123"
 }
